--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Secular+One|Suez+One&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/821811990c.js"></script>
 
